syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/labasubagia/realworld-backend/internal/adapter/handler/grpc/pb";

message Article {
    string slug = 1;
    string title = 2;
    string description  = 3;
    string body = 4;
    repeated string tag_list = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    bool favorited = 8;
    int64 favorite_count = 9;
    Profile author = 10;
}

message Comment {
    string id = 1;
    string body = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    Profile author = 5;
}
